--- a/accounts/accounts/templates/profile.html
+++ b/accounts/accounts/templates/profile.html
@@ -4,7 +4,7 @@
     <title>Profile</title>
 </head>
 <body>
-    <h2>Welcome, {{ user.username }} 🎉</h2>
+    <h2>Welcome, {{ user.username }} </h2>
     <p>Phone: {{ user.phone_number }}</p>
     <p>National ID: {{ user.national_id }}</p>
 
